<resources>
    <string name="app_name">Play Buddy</string>
    <string name="web_client_id">516875773807-gf7b1c43r8aonjn5vti9j664lhqbqdk5.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_name">Play Buddy</string>

    <string name="aboutus">
The Play Buddy is an app for IIIT-Delhi person for finding someone from IIIT-Delhi to play sports of same interest. It also gives you the updates regarding sports events held in our college. We have put a lot of efforts to build this app.\n
\nAshish Jain (ashish18052@iiitd.ac.in)\n
Sarosh Hasan (sarosh18084@iiitd.ac.in)\n
Vikash Kumar Pandey (vikash18086@iiitd.ac.in)</string>
    <string name="contactus">
Admin - Admin_Name\nadmin@iiitd.ac.in \nMobile number 9876543212 , 9876543234
</string>
    <string name="venue">Venue</string>
    <string name="enter_venue">Enter Venue</string>
    <string name="select_venue">Select Venue</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="sports">Sports</string>
</resources>
