<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdminVenueFragment">

    <TextView
        android:id="@+id/heading"
        android:layout_width="164dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/venue"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/material_drawer_account_header_compact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/venueEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_goneMarginTop="20dp"
        app:layout_goneMarginEnd="20dp"
        app:layout_goneMarginStart="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_venue"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintBottom_toTopOf="@id/avspinnercombo"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/buttonslayoutaddsport"
        app:layout_constraintTop_toBottomOf="@+id/venueEdit"
        android:id="@+id/avspinnercombo"
        >
        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20sp"
            android:id="@+id/avtv1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/select_venue"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
        <Spinner
            android:id="@+id/venue_sportlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            app:layout_constraintTop_toBottomOf="@id/avtv1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:ems="10"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:layout_editor_absoluteX="8dp" />

    </android.support.constraint.ConstraintLayout>




    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttonslayoutaddsport"
        app:layout_constraintTop_toBottomOf="@id/avspinnercombo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/venuesave"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <Button
            android:id="@+id/venueremove"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/remove"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/venuecancle"
            app:layout_constraintStart_toEndOf="@+id/venuesave"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/venuecancle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>